--- a/start-Q (2)/style.css
+++ b/start-Q (2)/style.css
@@ -1,13 +1,69 @@
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-weight: 500;
 }
 
 a {
   color: orange;
 }
-
 a:hover {
   color: black;
 }
-/*# sourceMappingURL=style.css.map */
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #4a7a8e;
+  background-color: #5183a7;
+  height: 250px;
+  width: 250px;
+  margin-top: 50px;
+}
+.box .minibox {
+  border: 1 px solid #345880;
+  background-color: #345880;
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 20px;
+  color: #ffffff;
+  transition: 2s;
+}
+.box .minibox:hover {
+  height: 180px;
+  width: 180px;
+}
+
+@media screen and (min-width: 770px) {
+  .box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid #4a7a8e;
+    background-color: #5183a7;
+    height: 250px;
+    width: 250px;
+    margin-top: 50px;
+  }
+  .minibox {
+    border: 1 px solid #345880;
+    background-color: #345880;
+    height: 100px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 20px;
+    color: #ffffff;
+    transition: 2s;
+  }
+  .minibox:hover {
+    height: 180px;
+    width: 180px;
+  }
+}/*# sourceMappingURL=style.css.map */
