--- a/start-Q (2)/_first.sass
+++ b/start-Q (2)/_first.sass
@@ -1,41 +1,40 @@
 #first
-
+    padding: 30px 0
 @media screen and (max-width: 770px)
-    .box
-        border: 3px solid #4a7a8e
-        background-color: #5183a7
-        height: 200px
-        width: 200px
-        margin-top: 20px
-        .minibox
-            border: 1 px solid #345880
-            background-color: #345880
-            height: 100px
-            width: 100px
+        .box3
+            border: 3px solid #4a7a8e
+            background-color: #5183a7
+            height: 200px
+            width: 200px
+            .minibox
+                border: 1 px solid #345880
+                background-color: #345880
+                height: 100px
+                width: 100px
+                display: flex
+                justify-content: center
+                align-items: center
+                flex-direction: column
+                font-weight: 700
+                font-size: 20px
+                color: #ffffff
+                transition: 2s
+                &:hover
+                    height: 160px
+                    width: 160px
+
+@media screen and (min-width: 770px)
+    #first
+        .col-md-12
             display: flex
             justify-content: center
             align-items: center
-            flex-direction: column
-            font-weight: 700
-            font-size: 20px
-            color: #ffffff
-            transition: 2s
-            &:hover
-                height: 160px
-                width: 160px
-    .second
-        position: absolute
-        top: 200px
-    .third
-        position: absolute
-        top: 400px
-@media screen and (min-width: 770px)
-    .box
+            justify-content: space-around
+    .box3
         border: 3px solid #4a7a8e
         background-color: #5183a7
         height: 200px
         width: 200px
-        margin-top: 20px
         .minibox
             border: 1 px solid #345880
             background-color: #345880
@@ -52,4 +51,3 @@
             &:hover
                 height: 180px
                 width: 180px
-    
