--- a/start-Q (2)/style.css
+++ b/start-Q (2)/style.css
@@ -10,15 +10,18 @@ a:hover {
   color: black;
 }
 
+#first {
+  padding: 30px 0;
+}
+
 @media screen and (max-width: 770px) {
-  .box {
+  .box3 {
     border: 3px solid #4a7a8e;
     background-color: #5183a7;
     height: 200px;
     width: 200px;
-    margin-top: 20px;
   }
-  .box .minibox {
+  .box3 .minibox {
     border: 1 px solid #345880;
     background-color: #345880;
     height: 100px;
@@ -32,28 +35,25 @@ a:hover {
     color: #ffffff;
     transition: 2s;
   }
-  .box .minibox:hover {
+  .box3 .minibox:hover {
     height: 160px;
     width: 160px;
   }
-  .second {
-    position: absolute;
-    top: 200px;
-  }
-  .third {
-    position: absolute;
-    top: 400px;
-  }
 }
 @media screen and (min-width: 770px) {
-  .box {
+  #first .col-md-12 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .box3 {
     border: 3px solid #4a7a8e;
     background-color: #5183a7;
     height: 200px;
     width: 200px;
-    margin-top: 20px;
   }
-  .box .minibox {
+  .box3 .minibox {
     border: 1 px solid #345880;
     background-color: #345880;
     height: 100px;
@@ -67,8 +67,135 @@ a:hover {
     color: #ffffff;
     transition: 2s;
   }
-  .box .minibox:hover {
+  .box3 .minibox:hover {
     height: 180px;
     width: 180px;
+  }
+}
+#second {
+  padding: 100px;
+}
+
+@media screen and (max-width: 500px) {
+  .box2 {
+    display: flex;
+    background-color: #3a1e2b;
+    height: 70px;
+    width: 100px;
+    justify-content: center;
+    padding-top: 15px;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 20px;
+  }
+  .box2:hover {
+    background-color: #444152;
+  }
+}
+@media screen and (min-width: 501px) {
+  #second .col-md-12 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+  }
+  #second .box2 {
+    display: flex;
+    background-color: #7485bf;
+    height: 70px;
+    width: 150px;
+    justify-content: center;
+    padding-top: 20px;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 20px;
+  }
+  #second .box2:hover {
+    background-color: #444152;
+  }
+}
+@media screen and (min-width: 801px) {
+  #second .col-md-12 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+  }
+  #second .box2 {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    border: 5px solid #88637b;
+    background-color: #88637b;
+    border-radius: 5px;
+    color: #ffffff;
+    height: 100px;
+    width: 200px;
+    font-size: 20px;
+  }
+  #second .box2:hover {
+    background-color: #444152;
+  }
+}
+#third {
+  padding: 50px 0;
+}
+
+@media screen and (max-width: 500px) {
+  .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #c3c586;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    background-color: #c3c586;
+    font-weight: 700;
+    font-size: 22px;
+    color: #ffffff;
+    position: relative;
+  }
+}
+@media screen and (min-width: 501px) {
+  #third .col-md-12 {
+    display: flex;
+    justify-content: space-around;
+  }
+  #third .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #c3c586;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    background-color: #c3c586;
+    font-weight: 700;
+    font-size: 22px;
+    color: #ffffff;
+  }
+}
+@media screen and (min-width: 801px) {
+  #third .col-md-12 {
+    display: flex;
+    justify-content: space-around;
+  }
+  #third .circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #966d49;
+    border-radius: 100%;
+    height: 200px;
+    width: 200px;
+    background-color: #966d49;
+    font-weight: 700;
+    font-size: 22px;
+    color: #ffffff;
+    transition: 1s;
+  }
+  #third .circle:hover {
+    border-radius: 40px;
   }
 }/*# sourceMappingURL=style.css.map */
